cmake_minimum_required(VERSION 3.17)
project(starwars)

set(CMAKE_CXX_STANDARD 17)

add_library(CONST Constants.cpp)
include_directories(${starwars_SOURCE_DIR}/objects)
include_directories(${starwars_SOURCE_DIR}/controller)
include_directories(${starwars_SOURCE_DIR}/output)
include_directories(${starwars_SOURCE_DIR}/input)

add_subdirectory(output)
add_subdirectory(objects)
add_subdirectory(input)
add_subdirectory(controller)
add_executable(starwars main.cpp)
target_link_libraries(starwars OUTPUT)
target_link_libraries(starwars OBJECTS)
target_link_libraries(starwars KEYBOARD)
target_link_libraries(starwars CONTROLLER)
